--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
 }
 
 .banner1 {
+  cursor: auto;
   font-family: "Montserrat", sans-serif;
   padding: 60px 0;
   background-image: url(../assets/banner1-bg.png);
@@ -44,6 +45,7 @@ body {
   }
 }
 .banner1 .title {
+  cursor: auto;
   font-size: 40px;
   font-weight: bold;
   text-transform: uppercase;
@@ -60,6 +62,7 @@ body {
   }
 }
 .banner1 .subtitle {
+  cursor: auto;
   font-size: 24px;
   font-weight: 700;
   text-transform: uppercase;
@@ -75,6 +78,7 @@ body {
   }
 }
 .banner1 .detail {
+  cursor: auto;
   font-size: 20px;
   color: #343434;
   line-height: 1.2;
@@ -134,6 +138,7 @@ body {
   }
 }
 .banner1__subtitle__container {
+  cursor: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -179,6 +184,7 @@ body {
 }
 
 .banner2 {
+  cursor: auto;
   font-family: "Montserrat", sans-serif;
   padding: 110px 0;
   position: relative;
@@ -207,6 +213,7 @@ body {
   z-index: 2;
 }
 .banner2 .title {
+  cursor: auto;
   font-size: 32px;
   color: rgb(255, 255, 255);
   font-weight: 700;
@@ -230,6 +237,7 @@ body {
   }
 }
 .banner2 .title span {
+  cursor: auto;
   font-weight: 800;
 }
 .banner2 .packages {
@@ -261,6 +269,7 @@ body {
   }
 }
 .banner2 .packages li {
+  cursor: auto;
   font-weight: 600;
   font-size: 18px;
   text-transform: uppercase;
@@ -302,6 +311,7 @@ body {
 }
 
 .banner3 {
+  cursor: auto;
   font-family: "Montserrat", sans-serif;
   padding: 35px 0;
   background-image: url(../assets/banner3-bg-v2.png);
@@ -313,6 +323,7 @@ body {
   max-width: 81%;
 }
 .banner3 .title {
+  cursor: auto;
   font-size: 30px;
   font-weight: 700;
   text-transform: uppercase;
@@ -333,6 +344,7 @@ body {
   }
 }
 .banner3 .subtitle {
+  cursor: auto;
   font-size: 24px;
   line-height: 1.2;
   text-align: left;
